Cycles Displacement node makes Blender prone to crash #53978

Closed
opened 2018-02-01 20:46:33 +01:00 by Tom Telos · 18 comments

System Information
Mac OS 10.13.2 ; iMac Retina 5K (late 2015) 16GB RAM ; AMD Radeon R9 M395X 4GB

Blender Version
Broken: 2.79 builds that include the Cycles Displacement node ; all 2.80 so far (Feb 1).
Worked: 2.79 of Jan 20th, 2018.

Short description of error
Character with many Cycles materials, including some with displacement, makes Blender crash if I try to render.

Exact steps for others to reproduce the error
Open attached .blend file; try to render. DisplacNodeCrash.blend

[THANK you!]

**System Information** Mac OS 10.13.2 ; iMac Retina 5K (late 2015) 16GB RAM ; AMD Radeon R9 M395X 4GB **Blender Version** Broken: 2.79 builds that include the Cycles Displacement node ; all 2.80 so far (Feb 1). Worked: 2.79 of Jan 20th, 2018. **Short description of error** Character with many Cycles materials, including some with displacement, makes Blender crash if I try to render. **Exact steps for others to reproduce the error** Open attached .blend file; try to render. [DisplacNodeCrash.blend](https://archive.blender.org/developer/F2080591/DisplacNodeCrash.blend) [THANK you!]
Author

Added subscriber: @ttelos

Added subscriber: @ttelos

#53987 was marked as duplicate of this issue

#53987 was marked as duplicate of this issue
Member

Added subscriber: @MaiLavelle

Added subscriber: @MaiLavelle
Mai Lavelle self-assigned this 2018-02-02 01:58:07 +01:00
Member

This was caused by 7261d675e6. Nothing to do with displacement, but rather bad memory access in OSL code.

This was caused by 7261d675e6aeb. Nothing to do with displacement, but rather bad memory access in OSL code.

This issue was referenced by blender/cycles@9a66368033

This issue was referenced by blender/cycles@9a663680333bac845d4bf9d0d51624e11c83af1f

This issue was referenced by b2dc0e6970

This issue was referenced by b2dc0e6970e08c798a76c39470eed5a61f5ec9cb
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

THANK YOU!

How long until your commit shows up in https://builder.blender.org/download/ ?

THANK YOU! How long until your commit shows up in https://builder.blender.org/download/ ?
Member

Builds are done nightly, so look for it tomorrow.

Builds are done nightly, so look for it tomorrow.

Added subscriber: @FloridaJo

Added subscriber: @FloridaJo
Author

Feb 02 builds work like a charm! Thank you, again.

But, what is the purpose of the Displacement node?

Here is a test render of an Oryx-style horn, done with Blender 2.79 dated February 2nd,
that inserts a default Displacement node automatically,
and where I have set the material’s Displacement Setting to “Bump Only”: OryxBumpOnly.png

Here is the same, set to “Displacement Only”: OryxDisplacOnly.png
It retains the detail of “Bump Only”, and adds some true displacement. Good.
But when I choose Bump and Displacement, I lose detail: OryxBumpAndDisplac.png

A pre-Displacement-node render, done with a Blender 2.79 dated January 20th,
using Displacement=Both: OryxBoth.png
gives me a better result than Bump and Displacement with the Displacement node active.

What am I misunderstanding, here?

Feb 02 builds work like a charm! Thank you, again. But, what is the purpose of the Displacement node? Here is a test render of an Oryx-style horn, done with Blender 2.79 dated February 2nd, that inserts a default Displacement node automatically, and where I have set the material’s *Displacement Setting* to “Bump Only”: ![OryxBumpOnly.png](https://archive.blender.org/developer/F2110867/OryxBumpOnly.png) Here is the same, set to “Displacement Only”: ![OryxDisplacOnly.png](https://archive.blender.org/developer/F2110894/OryxDisplacOnly.png) It retains the detail of “Bump Only”, and adds some true displacement. Good. But when I choose *Bump and Displacement,* I lose detail: ![OryxBumpAndDisplac.png](https://archive.blender.org/developer/F2110919/OryxBumpAndDisplac.png) A pre-Displacement-node render, done with a Blender 2.79 dated January 20th, using Displacement=Both: ![OryxBoth.png](https://archive.blender.org/developer/F2111009/OryxBoth.png) gives me a better result than *Bump and Displacement* with the Displacement node active. What am I misunderstanding, here?
Member

Added subscriber: @brecht

Added subscriber: @brecht
Member

The displacement issue should be opened as a separate task for organization purposes.

I want to say its because the feature is still experimental and we haven't gotten everything sorted out yet, but apparently that's no longer the case... @brecht, do you want to fix this?

The displacement issue should be opened as a separate task for organization purposes. I want to say its because the feature is still experimental and we haven't gotten everything sorted out yet, but apparently that's no longer the case... @brecht, do you want to fix this?

Displacement + Bump worked well in my tests. So please create a new report with a .blend attached, and I'll fix it.

Displacement + Bump worked well in my tests. So please create a new report with a .blend attached, and I'll fix it.
Author

THANK you, gentlemen!

The difference I see, occurs with my complete WIP, but disappears when I reduce my .blend file to just one horn,
so the bug, if any, is truly arcane. I shall report it if I discover a minimal set of circumstances that triggers it.

Again: thank you!

THANK you, gentlemen! The difference I see, occurs with my complete WIP, but disappears when I reduce my .blend file to just one horn, so the bug, if any, is truly arcane. I shall report it if I discover a minimal set of circumstances that triggers it. Again: thank you!

Ok, we want to fix bugs that happen in more rare situations as well though. So if you want to attach the more complicated .blend, I'd be interested to fix it.

Ok, we want to fix bugs that happen in more rare situations as well though. So if you want to attach the more complicated .blend, I'd be interested to fix it.
Author

THANK you, Brecht!
My WIP has become rather cluttered, so it’s overdue for some Spring Cleaning, which I am in the process of.
If, after that, the problem still persists, I shall definitely show you some details. ^_^

THANK you, Brecht! My WIP has become rather cluttered, so it’s overdue for some Spring Cleaning, which I am in the process of. If, after that, the problem still persists, I shall definitely show you some details. ^_^
Author

So far, so good: https://sta.sh/21968qcn7oqe

Your Cycles is a marvel, Brecht. I used to be a fan of LuxRender,
but the Cycles nodes, and OSL, and Blender integration, and oh-so-FAST, even without CUDA!

That’s it for me. I’m not even looking at another renderer.

So far, so good: https://sta.sh/21968qcn7oqe Your Cycles is a marvel, Brecht. I used to be a fan of LuxRender, but the Cycles nodes, and OSL, and Blender integration, and oh-so-FAST, even without CUDA! That’s it for me. I’m not even looking at another renderer.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53978
No description provided.